--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -2,14 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#aacccc"
     tools:context="com.gmolabs.polterguide.app.FragmentA">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_margin="@dimen/abc_action_bar_icon_vertical_padding"
+
+    <it.gmariotti.cardslib.library.view.CardView
+        xmlns:card="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/recordCard"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment_a" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginTop="12dp"
+        card:card_layout_resourceID="@layout/card_layout"/>
 
 </FrameLayout>
