Location provider used with reverse geocoding to add city, country to the record card subtitle.

--- a/app/src/main/res/layout/card_record_inner_content.xml
+++ b/app/src/main/res/layout/card_record_inner_content.xml
@@ -58,7 +58,7 @@
             <TextView
                 style="@android:style/TextAppearance.DeviceDefault.Small"
                 android:textColor="@android:color/darker_gray"
-                android:id="@+id/card_main_inner_tertiary_title"
+                android:id="@+id/locationTitle"
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
