--- a/app/src/main/res/layout/card_record_inner_content.xml
+++ b/app/src/main/res/layout/card_record_inner_content.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="250dp"
+    >
 
     <ImageView
         android:id="@+id/colorBorder"
@@ -62,6 +63,15 @@
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+
+            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:map="http://schemas.android.com/apk/res-auto"
+                class="com.google.android.gms.maps.SupportMapFragment"
+                android:id="@+id/map"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                map:uiZoomControls="false"
+                android:name="com.google.android.gms.maps.MapFragment"/>
 
         </RelativeLayout>
 
