made screen auto flipping a preference, default to false. cuz it's too weird otherwise. TODO: present a modular window to set this at login/initialization...

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -18,6 +18,12 @@
             android:summary="Set current password (for debugging purposes)"
             android:dialogTitle="Change password" />
 
+        <CheckBoxPreference
+            android:key="autoflip"
+            android:title="autoflip"
+            android:defaultValue="false"
+        />
+
     </PreferenceCategory>
 
     <!--<PreferenceCategory-->
