now polling lat, lng, bearing, and elevation every 5 seconds by the chronometer. these get written to firebase, under the temprecording node, labeled by the time interval (0, 5, 10, etc). Hitting the done button renames this data to a tag generated by the current location and timestamp...this completes the TempSoundscape node in firebase, which now contains a collection of recordings, each consisting of a collection of points. Hitting done also causes the undo and done buttons to become hidden...recording again at this point creates a new soundscape.

--- a/app/src/main/res/layout/card_record_inner_content.xml
+++ b/app/src/main/res/layout/card_record_inner_content.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentRight="@id/colorBorder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="4dp">
 
         <!-- Use same ID to use built-in features -->
         <!--<TextView-->
@@ -61,6 +61,7 @@
                 android:textColor="@android:color/darker_gray"
                 android:id="@+id/locationTitle"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="-3dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -70,6 +71,7 @@
                 android:id="@+id/map"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
                 map:uiZoomControls="false"
                 android:name="com.google.android.gms.maps.MapFragment"/>
 
