--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gmolabs.polterguide.app.FragmentA">
+    tools:context="com.gmolabs.polterguide.app.FragmentA"
+    android:background="#000000">
 
     <!-- TODO: Update blank fragment layout -->
 
